--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
  </div>
   <main>  
-       <h1>TIC TAC TOE</h1> <br> <br>
+       <h1>TIC TAC TOE</h1> 
+       <br> <br>
         <div class="container"> 
           <div class="game">
             <button class="box"></button>
